--- a/index.html
+++ b/index.html
@@ -1,42 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ArcGIS Map</title>
-    <link
-      rel="stylesheet"
-      href="https://js.arcgis.com/4.30/esri/themes/light/main.css"
-    />
-    <style>
-      html, body, #viewDiv {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="viewDiv"></div>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <title>ArcGIS Maps SDK for JavaScript Tutorials: Using a View with map components and Calcite components.</title>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css">
+  <script src="https://js.arcgis.com/4.30/"></script>
+  <script type="module" src="https://js.arcgis.com/calcite-components/2.11.1/calcite.esm.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/2.11.1/calcite.css" />
+  <script type="module" src="https://js.arcgis.com/map-components/4.30/arcgis-map-components.esm.js"></script>
+  <style>
+    html,
+    body,
+    arcgis-map {
+      padding: 0;
+      margin: 0;
+      height: 100%;
+      width: 100%;
+    }
+  </style>
+  <script>
+    document.querySelector("arcgis-map").addEventListener("arcgisViewReadyChange", (event) => {
+        const { portalItem } = event.target.map;
+        const navigationLogo = document.querySelector("calcite-navigation-logo");
+        navigationLogo.heading = portalItem.title;
+        navigationLogo.description = portalItem.snippet;
+        navigationLogo.thumbnail = portalItem.thumbnailUrl;
+        navigationLogo.href = portalItem.itemPageUrl;
+        navigationLogo.label = "Thumbnail of map";
+        // turn off the loader once the view is ready
+        document.querySelector("calcite-loader").hidden = true;
 
-    <!-- Load Map Components from CDN -->
-    <script src="https://js.arcgis.com/4.30/"></script>
-    <script>
-      require([
-        'esri/Map',
-        'esri/views/MapView'
-      ], function(Map, MapView) {
-        var map = new Map({
-          basemap: 'topo-vector'
-        });
+    });
+</script>
+</head>
 
-        var view = new MapView({
-          container: 'viewDiv', // Reference to the div id
-          map: map,
-          zoom: 4,
-          center: [15, 65] // Longitude, Latitude
-        });
-      });
-    </script>
-  </body>
+<body>
+  <calcite-shell>
+    <calcite-navigation slot="header">
+        <calcite-navigation-logo slot="logo" target="_blank"></calcite-navigation-logo>
+    </calcite-navigation>
+
+    <arcgis-map item-id="05e015c5f0314db9a487a9b46cb37eca">
+        <arcgis-legend position="bottom-right"></arcgis-legend>
+    </arcgis-map>
+
+</calcite-shell>
+<calcite-loader></calcite-loader>
+</body>
+
 </html>
